# efficiency-benchmark-gui

./: .gitignore  bun.lockb  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/compinents/: Battery.tsx  Cpu.css  Cpu.tsx  Eta.css  Eta.tsx  Score.tsx  Settings.css  Settings.tsx  Stdout.css  Stdout.tsx
src/components/battery/: index.tsx  styles.css
src/components/cpu/: index.tsx
src/components/eta/: index.tsx
src/components/output/: index.tsx  styles.css
src/components/score/: index.tsx  styles.css
src/components/settings/: index.tsx  styles.css
src/components/stdout/: index.tsx
